--- a/app/Test-and-extension.html
+++ b/app/Test-and-extension.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/Test-and-extension.css" />
 		<link rel="stylesheet" type="text/css" href="mui/css/mui.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css/layer.css"/>
+		<!--<link rel="stylesheet" type="text/css" href="css/layer.css"/>-->
 		<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 		<script src="ydui/js/ydui.flexible.js"></script>
 		<!-- <SCRIPT LANGUAGE="JavaScript" src=http://floathn.tq.cn/floatcard?adminid=9838315&sort=0 ></SCRIPT> -->
@@ -161,15 +161,15 @@
 		<!-- 手机验证弹框 -->
 		<div class="phoneModel None">
 			<span class="close" style="font-weight: 300;"></span>
-			<p style="color: #333333;padding: 10px 0;">手机验证</p>
+			<p style="color: #333333;padding: 10px 0;font-size: 15px;">手机验证</p>
 			<div style="font-size: 12px;padding-bottom: 15px;">
 				<span>短信验证码已发送至</span>
-				<span class="telphone"></span>
+				<span class="telphone" style="font-size: 14px;"></span>
 			</div>
 			<form action="" method="post">
 				<div style="position: relative;line-height: 38px;">
 					<input type="text" name="ma" class="ma" placeholder="请输入短信验证码">
-					<span style="color: #007AFF;position: absolute;top: 0px;right: 7px;cursor: pointer;" class="getMaNum">获取验证码</span>
+					<span style="color: #007AFF;position: absolute;top: 0px;right: 7px;cursor: pointer;font-size: 13px;" class="getMaNum">获取验证码</span>
 				</div>
 				<input type="submit" value="确定" style="width: 90%;border-radius: 20px;" class="sendreg"/>
 			</form>
@@ -179,7 +179,7 @@
 		<script src="ydui/js/ydui.js"></script>
 		<script src="mui/js/mui.min.js"></script>
 		<script src="AmazeUI/js/amazeui.min.js"></script>
-		<script src="js/layer.js"></script>
+		<!--<script src="js/layer.js"></script>-->
 		<script>
 			
 			$(function(){
