--- a/app/qualifications9.html
+++ b/app/qualifications9.html
@@ -13,18 +13,18 @@
 		<link rel="stylesheet" type="text/css" href="mui/css/mui.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/qualifcations9.css" />
 		<script src="js/changHtmlFontSize.js"></script>
-		
+		<!-- <script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10187673/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();</script> -->
 	</head>
 	<body>
 		<div class="app">
 			<div class="nav">
-				<a href="#">学习费用</a>
+				<a href="#" class="kefu">学习费用</a>
 				<span>|</span>
-				<a href="#">考证时间</a>
+				<a href="#" class="kefu">考证时间</a>
 				<span>|</span>
-				<a href="#">快速考证</a>
+				<a href="#" class="kefu">快速考证</a>
 				<span>|</span>
-				<a href="#">报考政策</a>
+				<a href="#" class="kefu">报考政策</a>
 			</div>
 			<div class="banner">
 				<a href="javascript:;">
@@ -391,7 +391,8 @@
 				var dialog = YDUI.dialog;
 				// enroll mose-btn getError_btn free-access
 				$('.enroll,.mose-btn,.getError_btn,.free-access,.kefu').on('click', function() {
-					var _53code=document.createElement("script");_53code.src = '//tb.53kf.com/code/code/c762816c46f81ba33560df7feac9ded1/1'; var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(_53code, s);
+					var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10187673/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);
+					// var _53code=document.createElement("script");_53code.src = '//tb.53kf.com/code/code/c762816c46f81ba33560df7feac9ded1/1'; var s = document.getElementsByTagName("script")[0];s.parentNode.insertBefore(_53code, s);
 				})
 				$('.appy_box_submit').on('click', function() {
 					// appy_box 
