--- a/app/qualifications.html
+++ b/app/qualifications.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" type="text/css" href="mui/css/mui.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/qualifcations.css" />
 		<script src="js/changHtmlFontSize.js"></script>
+		<!-- <script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10187673/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();</script> -->
+
 	</head>
 	<body>
 		<div class="app">
