--- a/app/qualifications7.html
+++ b/app/qualifications7.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" type="text/css" href="mui/css/mui.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/qualifcations7.css" />
 		<script src="js/changHtmlFontSize.js"></script>
+		<!-- <script>(function() {var _53code = document.createElement("script");_53code.src = "https://tb.53kf.com/code/code/10187673/1";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(_53code, s);})();</script> -->
+
 	</head>
 	<body>
 		<div class="app">
@@ -363,9 +365,9 @@
 					var bol2 = isRadioChecked($('.radio2'));
 					var bol3 = isRadioChecked($('.radio3'));
 
-					var myRegExp = MyRegExp(); //验证对象   telphone usename
-
-					var bol5 = myRegExp.isPhone($.trim($('.telphone').val()));
+					
+					
+					var bol5 = MyRegExp.isPhone($.trim($('.telphone').val()));
 					// var bol4 = myRegExp.isPhone($.trim($('.usename').val()));
 
 					var timer = null; //定时器
@@ -380,7 +382,7 @@
 						return false;
 					}
 					if (!bol3) {
-						dialog.alert('请勾选你最喜欢的专业！')
+						dialog.alert('请勾选你提升方式！')
 						return false;
 					}
 					if (!$('.usename').val()) {
