--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 							<img data-original="index/img/2_22.png" />
 						</div>
 						<div>
-							<p class="p1">高中生专科</p>
+							<p class="p1">高中升专科</p>
 							<p>高中/中专/中职/升大专</p>
 							<a href="javascript:;"> 免费获取方案 </a>
 						</div>
@@ -883,7 +883,7 @@
 							<img data-original="index/img/6_35.png" />
 						</div>
 						<div>
-							<p class="p1">高中生本科</p>
+							<p class="p1">高中升本科</p>
 							<p>高中//中专/中职/升本科</p>
 							<a href="javascript:;"> 免费获取方案 </a>
 						</div>
