--- a/view2s/ruhu/ruhu5.html
+++ b/view2s/ruhu/ruhu5.html
@@ -297,12 +297,11 @@
          console.log('可以发送验证码请求了 ！')
 
           var data = {
-            education: $('input[name=xue]:checked').val(),
-            ageGroups: $('input[name=age]:checked').val(),
-            yearsSocial: $('input[name=way]:checked').val(),
-            name: $('input[name=username]').val(),
-            telPhone: $('input[name=userphone]').val(),
-            livePermitYears: $('input[name=zhen]').val(),
+            education:xue,
+            ageGroups: age,
+            yearsSocial: she,
+            name: username,
+            telPhone: userphone,
             sourceLink: sourceLink,
             fromPlatform: "广点通"
           }
