--- a/home/index.html
+++ b/home/index.html
@@ -95,7 +95,7 @@
         <div class="nav-box">
           <a href="#setion1" class="nv">首页</a>
           <a href="#setion2" class="nv">入户条件</a>
-          <a href="#setion3" class="nv">网上申报</a>
+          <a href="javascript:;">网上申报</a>
           <a href="#setion4" class="nv">办理流程</a>
           <a href="#setion5" class="nv">全新政策</a>
           <a href="#setion6" class="nv">成功案例</a>
@@ -171,25 +171,118 @@
       <!-- 第三屏 -->
       <div class="section3" id="setion3">
         <div class="content">
-
+          <h2><span>2019入户广州条件，</span><span class="r">选对方式事半功倍</span></h2>
+          <p>不知道自己适合哪种入户方案，办理入户无从下手？专业解决方案，一站式入户服务</p>
+          <div class="box">
+            <div>
+              <img src="img/f1.jpg" >
+              <h3>学历入户</h3>
+              <p>
+                1、无需提供计生证明<br>
+                2、无犯罪记录<br>
+                3、本科(40周岁以下含40周岁)<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 硕士(45周岁以下含45周岁)<br>      
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;博士(50周岁以下含50周岁）<br>
+                4、学历+学位<br>
+                5、广州社保满6个月
+              </p>
+              <div class="btn">
+                <a href="javascript:;">咨询详情</a>
+              </div>
+            </div>
+            <div>
+              <img src="img/f2.jpg" >
+              <h3>紧缺工种</h3>
+              <p>
+                1、无需提供计生证明<br>
+                2、无犯罪记录<br>
+                3、年龄35周岁以下含35周岁<br>
+                4、高中/中专及以上学历<br>
+                5、从事工种属紧缺工种<br>
+                6、广州连续居住2年及以上<br>
+                7、广州社保满6个月<br>
+                8、入户资质审查
+              </p>
+              <div class="btn">
+                <a href="javascript:;">咨询详情</a>
+              </div>
+            </div>
+            <div>
+              <img src="img/f3.jpg" >
+              <h3>高级技师/职称</h3>
+              <p>
+                1、无需提供计生证明<br>
+                2、无犯罪记录<br>
+                3、年龄45周岁以下含45周岁<br>
+                4、副高/高级技师<br>
+                5、广州社保满6个月<br>
+                6、所从事工作须与技能一致<br>
+                7、入户资质审查
+              </p>
+              <div class="btn">
+                <a href="javascript:;">咨询详情</a>
+              </div>
+            </div>
+            <div>
+              <img src="img/f4.jpg" >
+              <h3>技师入户</h3>
+              <p>
+                1、无需提供计生证明<br> 
+                2、无犯罪记录<br> 
+                3、年龄40周岁以下含40周岁<br> 
+                4、高中及以上学历（技师） <br>     无学历要求（二级技能）<br> 
+                5、广州社保满6个月<br> 
+                6、入户资质审查
+              </p>
+              <div class="btn">
+                <a href="javascript:;">咨询详情</a>
+              </div>
+            </div>
+            <div style="margin: 0;">
+              <img src="img/f5.jpg" >
+              <h3>积分入户</h3>
+              <p>
+                1、年龄不超过45周岁<br>
+                2、在广州有合法住所（含租房）<br>
+                3、持本市有效《广东省居住证》<br>
+                4、缴纳社会保险满4年<br>
+                5、无需提供计生证明<br>
+                6、无违法犯罪记录<br>
+                7、积分满100分
+              </p>
+              <div class="btn">
+                <a href="javascript:;">咨询详情</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <!-- 第四屏 -->
+      <!-- 第四屏 流程 -->
       <div class="section4" id="setion4">
-
+        <h2>入户广州一站式服务流程</h2>
+        <div>
+          <img src="img/c3.jpg" alt="">
+        </div>
       </div>
 
       <!-- 第五屏 -->
       <div class="section5" id="setion5">
         <div class="content">
-
+          <img src="img/hu1.jpg" >
         </div>
       </div>
-
+      
       <!-- 第六屏 -->
       <div class="section6" id="setion6">
-
+        <h2>入户广州您是否还有这协疑惑</h2>
+        <p>博霖教育入户根据你们的个人情况，量身定制方案轻松入户广州，选博霖教育入户，入户行业领先，入户快、稳妥</p>
+        <div class="box">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
       <div class="section7" id="setion7">
         <div class="content">
