--- a/home/index.html
+++ b/home/index.html
@@ -623,7 +623,7 @@
             <a href="javascript:;" class="">联系我们</a>
           </p>
           <p class="copy">
-            <span>©Copyright  版权所有：广州博霖教育科技有限公司版权所有  粤ICP19060809号</span>
+            <span>©Copyright  版权所有：广州博霖教育科技有限公司版权所有 粤ICP备19060809号-3</span>
           </p>
         </div>
       </div>
